@@ -1,7 +1,7 @@
 OpenVPN
 Copyright (C) 2002-2003 James Yonan <jim@yonan.net>
 
-$Id: ChangeLog,v 1.72 2003/05/03 10:57:07 jimyonan Exp $
+$Id: ChangeLog,v 1.73 2003/05/03 22:10:15 jimyonan Exp $
 
 Upcoming version 1.4.0
 
@@ -89,6 +89,9 @@ Upcoming version 1.4.0
   to /dev/null.
 * For inetd instantiations, dup socket descriptor
   to a >2 value.
+* Fixed bug in verify-cn script, where test would
+  incorrectly fail if CN=x was the last component
+  of the X509 composite string (Anonymous).
 
 2002.10.23 -- Version 1.3.2
 
